--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -82,13 +82,10 @@
                     style="text-decoration: none;color: white;">Oracle Cloud Infrastructure</a> ☁️</h3>
             <h5 style="color: yellowgreen;text-align: left;">Project Intern, <span
                     style="font-style: italic;">Jan 2019 - June 2019</span></h5>
-            <p style="color: white;text-align:left;font-weight: 100;">Working on CRM module for managing the flat sales
-                for various Construction companies. Mongo DB is used for storing the data,
-                Angular for front-end and express and NodeJS for backend. My team and I make sure that the UI/UX is
-                intuitive and simple to understand.<br>
-                <br>Also working on mobile application in React Native using Expo.I worked on some interesting use cases
-                like 'retrieving information from excel sheet', 'downloading pdfs from mobile app' among other things.
-                Writing re-usuable and robust code is number one on our check list.</p>
+            <p style="color: white;text-align:left;font-weight: 100;">My team worked on various deployment and configuration management tools like puppet, chef, ansible, terraform e.t.c.. 
+                During my internship period, I got the opportunity to learn more linux OS, automation of deployment, 
+                cloud servers architecture building. I specifically worked on network monitoring tools like Nagios and OMCS. <br>
+                <br>I successfully registered the nagios network monitoring tool on the cloud architecture. Also did some research on OMCS tool and able to partially configure it on the network before my internship ended.</p>
         </div>
     </div>
 
