changes in assrt

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -50,7 +50,7 @@
         <div class="col-md-1">
         </div>
         <div class="col-md-2">
-            <img src="../../../assets/inncircles.png" style="overflow-x: hidden; border-radius: 25px;margin-top: 2rem;"
+            <img src="assets/inncircles.png" style="overflow-x: hidden; border-radius: 25px;margin-top: 2rem;"
                 alt="Cinque Terre" width="200vw" height="160vh">
         </div>
         <div class="col-md-1"></div>
@@ -73,7 +73,7 @@
         <div class="col-md-1">
         </div>
         <div class="col-md-2">
-            <img src="../../../assets/OCI.jpg" style="overflow-x: hidden; border-radius: 25px;margin-top: 2rem;"
+            <img src="assets/OCI.jpg" style="overflow-x: hidden; border-radius: 25px;margin-top: 2rem;"
                 alt="Cinque Terre" width="200vw" height="160vh">
         </div>
         <div class="col-md-1"></div>
