--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -13,7 +13,7 @@
     <div class="col-md-1 nav-head" (click)="onTabClick('#workSectionMine')">
         <h3 class="mt-3 menu-item">Work</h3>
     </div>
-    <div class="col-md-1 nav-head">
+    <div class="col-md-1 nav-head" (click)="onTabClick('#projectSectionMine')">
         <h3 class="mt-3 menu-item">Projects</h3>
     </div>
     <div class="col-md-1 nav-head">
@@ -63,12 +63,13 @@
                 for various Construction companies. Mongo DB is used for storing the data,
                 Angular for front-end and express and NodeJS for backend. My team and I make sure that the UI/UX is
                 intuitive and simple to understand.<br>
-                <br>Also working on mobile application in React Native using Expo. I worked on some interesting use cases
+                <br>Also working on mobile application in React Native using Expo. I worked on some interesting use
+                cases
                 like 'retrieving information from excel sheet', 'downloading pdfs from mobile app' among other things.
                 Writing re-usuable and robust code is number one on our check list.</p>
         </div>
     </div>
-<hr/>
+    <hr />
     <div class="row py-3" style="align-items:flex-start;overflow-x: hidden;">
         <div class="col-md-1">
         </div>
@@ -80,12 +81,66 @@
         <div class="col-md-8">
             <h3 style="color:white;text-align: left;"> <a href="https://www.inncircles.com"
                     style="text-decoration: none;color: white;">Oracle Cloud Infrastructure</a> ☁️</h3>
-            <h5 style="color: yellowgreen;text-align: left;">Project Intern, <span
-                    style="font-style: italic;">Jan 2019 - June 2019</span></h5>
-            <p style="color: white;text-align:left;font-weight: 100;">My team worked on various deployment and configuration management tools like puppet, chef, ansible, terraform e.t.c.. 
-                During my internship period, I got the opportunity to learn more linux OS, automation of deployment, 
-                cloud servers architecture building. I specifically worked on network monitoring tools like Nagios and OMCS. <br>
-                <br>I successfully registered the nagios network monitoring tool on the cloud architecture. Also did some research on OMCS tool and able to partially configure it on the network before my internship ended.</p>
+            <h5 style="color: yellowgreen;text-align: left;">Project Intern, <span style="font-style: italic;">Jan 2019
+                    - June 2019</span></h5>
+            <p style="color: white;text-align:left;font-weight: 100;">My team worked on various deployment and
+                configuration management tools like puppet, chef, ansible, terraform e.t.c..
+                During my internship period, I got the opportunity to learn more linux OS, automation of deployment,
+                cloud servers architecture building. I specifically worked on network monitoring tools like Nagios and
+                OMCS. <br>
+                <br>I successfully registered the nagios network monitoring tool on the cloud architecture. Also did
+                some research on OMCS tool and able to partially configure it on the network before my internship ended.
+            </p>
+        </div>
+    </div>
+
+</section>
+
+<!-- this below section contains the projects works -->
+
+<section id="projectSectionMine" style="overflow-x: hidden;" class="project-section px-0 py-0 mx-0 my-0">
+    <h1 class="project-experience fancy-project"><span> Things I have Done
+             </span></h1>
+    <div class="row" style="align-items:flex-start;overflow-x: hidden;padding-top: 3rem;padding-bottom: 1rem;">
+        <div class="col-md-1">
+        </div>
+        <div class="col-md-2">
+            <img src="assets/appTime.png" style="overflow-x: hidden; border-radius: 25px;margin-top: 2rem;"
+                alt="Cinque Terre" width="200vw" height="200vh">
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-8">
+            <h3 style="color:rgb(26,26,43);text-align: left;"> <a href="https://www.inncircles.com"
+                    style="text-decoration: none;color:rgb(130,133,215);">AppTimePlus</a> 🚀</h3>
+            <h5 style="color: yellowgreen;text-align: left;">Microsoft WISE Mentorship Program, <span
+                    style="font-style: italic;">Mar 2018 - Dec 2018</span></h5>
+            <p style="color: rgb(26,26,43);text-align:left;font-weight: 100;">With many new social media apps coming into market, it is hard for today's youth to concentrate on what's important.
+                Main aim to help such people by controlling their app usage times.<br>
+                <br>Wriiten in java with firebase as backend, for android phone users, this app lets the user assign usage times limits to apps, get usage time graphs on daily basis. Also contains special features like getting friends usage times and daily/ weekly challenges</p>
+        </div>
+    </div>
+    <hr />
+    <div class="row py-3" style="align-items:flex-start;overflow-x: hidden;">
+        <div class="col-md-1">
+        </div>
+        <div class="col-md-2">
+            <img src="assets/OCI.jpg" style="overflow-x: hidden; border-radius: 25px;margin-top: 2rem;"
+                alt="Cinque Terre" width="200vw" height="160vh">
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-8">
+            <h3 style="color:rgb(26,26,43);text-align: left;"> <a href="https://www.inncircles.com"
+                    style="text-decoration: none;color: rgb(130,133,215);">Oracle Cloud Infrastructure</a> ☁️</h3>
+            <h5 style="color: yellowgreen;text-align: left;">Project Intern, <span style="font-style: italic;">Jan 2019
+                    - June 2019</span></h5>
+            <p style="color: rgb(26,26,43);text-align:left;font-weight: 200;">My team worked on various deployment and
+                configuration management tools like puppet, chef, ansible, terraform e.t.c..
+                During my internship period, I got the opportunity to learn more linux OS, automation of deployment,
+                cloud servers architecture building. I specifically worked on network monitoring tools like Nagios and
+                OMCS. <br>
+                <br>I successfully registered the nagios network monitoring tool on the cloud architecture. Also did
+                some research on OMCS tool and able to partially configure it on the network before my internship ended.
+            </p>
         </div>
     </div>
 
