added project work and other stuff

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -9,15 +9,18 @@
     <div class="col-md-2 nav-head" (click)="scrollToMainPage()">
         <h3 class="mt-3 menu-item">Shravya Kasturi</h3>
     </div>
-    <div class="col-md-7 "></div>
+    <div class="col-md-6 "></div>
     <div class="col-md-1 nav-head" (click)="onTabClick('#workSectionMine')">
         <h3 class="mt-3 menu-item">Work</h3>
     </div>
     <div class="col-md-1 nav-head" (click)="onTabClick('#projectSectionMine')">
         <h3 class="mt-3 menu-item">Projects</h3>
     </div>
-    <div class="col-md-1 nav-head">
+    <div class="col-md-1 nav-head" (click)="onTabClick('#aboutSectionMine')">
         <h3 class="mt-3 menu-item">About</h3>
+    </div>
+    <div class="col-md-1 nav-head" (click)="onTabClick('#connectSectionMine')">
+        <h3 class="mt-3 menu-item">Connect</h3>
     </div>
 </div>
 
@@ -79,7 +82,7 @@
         </div>
         <div class="col-md-1"></div>
         <div class="col-md-8">
-            <h3 style="color:white;text-align: left;"> <a href="https://www.inncircles.com"
+            <h3 style="color:white;text-align: left;"> <a href="https://www.oracle.com/in/cloud/"
                     style="text-decoration: none;color: white;">Oracle Cloud Infrastructure</a> ☁️</h3>
             <h5 style="color: yellowgreen;text-align: left;">Project Intern, <span style="font-style: italic;">Jan 2019
                     - June 2019</span></h5>
@@ -100,7 +103,7 @@
 
 <section id="projectSectionMine" style="overflow-x: hidden;" class="project-section px-0 py-0 mx-0 my-0">
     <h1 class="project-experience fancy-project"><span> Things I have Done
-             </span></h1>
+        </span></h1>
     <div class="row" style="align-items:flex-start;overflow-x: hidden;padding-top: 3rem;padding-bottom: 1rem;">
         <div class="col-md-1">
         </div>
@@ -110,13 +113,17 @@
         </div>
         <div class="col-md-1"></div>
         <div class="col-md-8">
-            <h3 style="color:rgb(26,26,43);text-align: left;"> <a href="https://www.inncircles.com"
-                    style="text-decoration: none;color:rgb(130,133,215);">AppTimePlus</a> 🚀</h3>
+            <h3 style="color:rgb(26,26,43);text-align: left;"> <a
+                    href="https://apkpure.com/app-time-plus/com.wise.bottombar.sample"
+                    style="text-decoration: none;color:rgb(130,133,215);">AppTimePlus</a> ⌛</h3>
             <h5 style="color: yellowgreen;text-align: left;">Microsoft WISE Mentorship Program, <span
                     style="font-style: italic;">Mar 2018 - Dec 2018</span></h5>
-            <p style="color: rgb(26,26,43);text-align:left;font-weight: 100;">With many new social media apps coming into market, it is hard for today's youth to concentrate on what's important.
+            <p style="color: rgb(26,26,43);text-align:left;font-weight: 200;">With many new social media apps coming
+                into market, it is hard for today's youth to concentrate on what's important.
                 Main aim to help such people by controlling their app usage times.<br>
-                <br>Wriiten in java with firebase as backend, for android phone users, this app lets the user assign usage times limits to apps, get usage time graphs on daily basis. Also contains special features like getting friends usage times and daily/ weekly challenges</p>
+                <br>Wriiten in java with firebase as backend, for android phone users, this app lets the user assign
+                usage times limits to apps, get usage time graphs on daily basis. Also contains special features like
+                getting friends usage times and daily/ weekly challenges</p>
         </div>
     </div>
     <hr />
@@ -124,24 +131,106 @@
         <div class="col-md-1">
         </div>
         <div class="col-md-2">
-            <img src="assets/OCI.jpg" style="overflow-x: hidden; border-radius: 25px;margin-top: 2rem;"
+            <img src="assets/chatBot.jpg" style="overflow-x: hidden; border-radius: 25px;margin-top: 2rem;"
                 alt="Cinque Terre" width="200vw" height="160vh">
         </div>
         <div class="col-md-1"></div>
         <div class="col-md-8">
-            <h3 style="color:rgb(26,26,43);text-align: left;"> <a href="https://www.inncircles.com"
-                    style="text-decoration: none;color: rgb(130,133,215);">Oracle Cloud Infrastructure</a> ☁️</h3>
-            <h5 style="color: yellowgreen;text-align: left;">Project Intern, <span style="font-style: italic;">Jan 2019
-                    - June 2019</span></h5>
-            <p style="color: rgb(26,26,43);text-align:left;font-weight: 200;">My team worked on various deployment and
-                configuration management tools like puppet, chef, ansible, terraform e.t.c..
-                During my internship period, I got the opportunity to learn more linux OS, automation of deployment,
-                cloud servers architecture building. I specifically worked on network monitoring tools like Nagios and
-                OMCS. <br>
-                <br>I successfully registered the nagios network monitoring tool on the cloud architecture. Also did
-                some research on OMCS tool and able to partially configure it on the network before my internship ended.
+            <h3 style="color:rgb(26,26,43);text-align: left;"> <a href="https://www.youtube.com/watch?v=9czScK2Byi0"
+                    style="text-decoration: none;color: rgb(130,133,215);">Vasavi Chatbot</a> ⌨</h3>
+            <h5 style="color: yellowgreen;text-align: left;">Microsoft WISE Mentorship Program, <span
+                    style="font-style: italic;">
+                    Mar 2018 - Dec 2018</span></h5>
+            <p style="color: rgb(26,26,43);text-align:left;font-weight: 200;">Any student, new or old have some doubts
+                regarding their college, it might be regarding faculty, placements, exam dates, application dead lines
+                e.t.c.. A Chatbot seemed like the right answer to the above questions. A one stop place to clarify all
+                your doubts regarding our college.<br>
+                <br>Used Microsoft Azure services QnA bot maker to train the bot with our questions. Then published to a
+                skype endpoint URL.
             </p>
         </div>
     </div>
+    <hr />
+    <div class="row py-3" style="align-items:flex-start;overflow-x: hidden;">
+        <div class="col-md-1">
+        </div>
+        <div class="col-md-2">
+            <img src="assets/facial_recog.jpg"
+                style="overflow-x: hidden; border-radius: 25px;margin-top: 2rem;margin-bottom: 2rem;" alt="Cinque Terre"
+                width="200vw" height="160vh">
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-8">
+            <h3 style="color:rgb(26,26,43);text-align: left;"> <a href="https://www.youtube.com/watch?v=9czScK2Byi0"
+                    style="text-decoration: none;color: rgb(130,133,215);">Smart Door Locking System</a> 🏠</h3>
+            <h5 style="color: yellowgreen;text-align: left;">IoT Project Using RPi, <span style="font-style: italic;">
+                    Jul 2018 - Aug 2018</span></h5>
+            <p style="color: rgb(26,26,43);text-align:left;font-weight: 200;">A prototype of Smart Door Lock that
+                unlocks using Facial Recognition. Used RPi 2 for running the program, piCam for capturing images and
+                training, Open CV module in python for model building and training.<br>
+            </p>
+        </div>
+    </div>
+</section>
 
+<!-- this below section contains more about me -->
+
+<section id="aboutSectionMine" style="overflow-x: hidden;" class="about-section px-0 py-0 mx-0 my-0">
+    <h1 class="project-experience fancy-project" style="margin-top: 0rem;"><span> Other Fun Things I do
+        </span></h1>
+    <p class="mt-3" style="color:rgb(26,26,43);text-align: center;">The most fun thing for me is playing with my baby
+        niece, Mia.
+        <br>Below are some other things I do in case she is not around. (P.S : She is not around much)</p>
+    <div class="row"
+        style="display:flex;overflow-x: hidden;padding-top: 2rem;padding-bottom: 2rem;align-content: center;-webkit-box-align: center;">
+        <div class="col-md-1"></div>
+        <div class="col-md-2 container">
+            <img src="assets/baking/cake.jpg" class="image-overlay" alt="My image Baking description" alt="Cinque Terre"
+                width="275vw" height="220vh">
+            <div class="middle">
+                <h2>Baking & Cooking</h2>
+            </div>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-2 container">
+            <img src="assets/binge/bb.jpg" class="image-overlay" alt="My image Baking description" alt="Cinque Terre"
+                width="275vw" height="220vh">
+            <div class="middle">
+                <h2>Binging Shows</h2>
+            </div>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-2 container">
+            <img src="assets/novel/novels.jpg" class="image-overlay" alt="My image Baking description"
+                alt="Cinque Terre" width="275vw" height="220vh">
+            <div class="middle">
+                <h2>Reading Old Novels</h2>
+            </div>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+</section>
+
+<!-- this section contains the social media links -->
+<section id="connectSectionMine" style="height: 100vh;overflow-x: hidden;" class="connect-section">
+    <h1  class="about-experience" style="padding-top: 5rem;" ><span> I'm passionate about learning new things,
+        </span></h1>
+    <h1 class="about-experience fancy-project" style="margin-top: 0rem;" ><span>love to discuss politics and books,
+        </span></h1>
+    <h1 class="about-experience mt-0" ><span>and can be easily pleased with desserts or omlette!
+        </span></h1>
+    <p  class="mt-3" style="color:rgb(26,26,43);text-align: center;font-size:large;">Let's Connect! I am usually active in <a href="https://www.linkedin.com/in/shravya-kasturi-341256168/" style="text-decoration: blue;">LinkedIn</a><br> Message me in
+        <a href="https://www.linkedin.com/in/shravya-kasturi-341256168/" style="text-decoration: blue;">LinkedIn</a> or
+        shoot me a mail at <span style="color: blue;">chittishravi123@gmail.com</span></p>
+        <div class="row my-5" style="margin-left: 25vw;">
+            <a class="mx-4">
+                <img src="assets/connect/twitter.webp" class="zoom" width="150" height="150">
+            </a>
+            <a class="mx-4" href="https://www.linkedin.com/in/shravya-kasturi-341256168/">
+                <img src="assets/connect/linkedin.jpg" class="zoom" width="150" height="150">
+            </a>
+            <a class="mx-4" href="https://www.instagram.com/shravya_kasturi/">
+                <img src="assets/connect/insta.jpg" class="zoom" width="150" height="150">
+            </a>
+        </div>
 </section>
