--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -61,10 +61,10 @@
 }
 
 .nav-head:hover {
-  background-color: rgb(78,79,129) !important;
+  background-color: rgb(142,145,219) !important;
   border-radius: 5px 5px 5px 5px;
   z-index: -2;
-  box-shadow:  0 3px 0 #1a1a1f;
+  // box-shadow:  0 3px 0 #1a1a1f;
 }
 
 .menu-item:hover {
@@ -72,7 +72,7 @@
 }
 
 .menu-item {
-  color: rgb(130,133,215);
+  color: rgb(72,76,196);
     font-size: medium;
     font-weight:normal;
     font-family:'Open Sans', sans-serif;
@@ -177,4 +177,69 @@ hr {
   margin-left: 5rem;
   margin-right: 5rem;
   border-top: 1px solid gray;
+}
+
+.about-section {
+  // background-color: rgb(183,183,193);
+  background-color: rgb(192,194,235);
+
+}
+
+.image-overlay {
+  background-color: black;
+  overflow-x: hidden; 
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  opacity: 1;
+  display: block;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+}
+
+
+.container:hover .image-overlay {
+  opacity: 0.4;
+  // background-color: black;
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+
+.about-experience {
+  font-family: 'Open Sans', sans-serif ;
+  font-size: 2rem;
+  font-weight:lighter;
+  color: rgb(26,26,43);;
+  text-align: center;
+  width:100vw;
+  margin-top: 1rem;
+  padding-left:5rem;
+  padding-right: 5rem;
+  padding-top: 1.5rem;
+}
+
+.connect-section {
+    background-color: white;
+}
+
+.zoom {
+  transition: transform .4s; /* Animation */
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(1.1); 
 }
